<resources>
    <string name="app_name">Energiser</string>
    <string name="title_explore">Explore</string>
    <string name="api_map_key">AIzaSyA2W69fcSdTDZEptQSLI5Q7iKn3E7rljvY</string>
    <string name="title_my_car">My Car</string>
    <string name="title_settings">Settings</string>
    <string name="main_content_text">Main Content</string>
    <string name="location_button_text">Nearby Stations</string>
    <string name="favourites_button_text">Favourites</string>
    <string name="go_there_button_text">Go There</string>
    <string name="nearby_places_text_string">While you charge:</string>
    <string name="settings_title_text">Settings</string>
    <string name="account_button_txt">Account</string>
    <string name="my_car_text">My Car</string>
    <string name="help_button_text">Help</string>
    <string name="about_button_text">About</string>
    <string name="about_text">About Energiser</string>
    <string name="help_text">Help</string>
    <string name="account_text">Account</string>
    <string name="mileage_text">Mileage</string>
    <string name="t_consumption_text">Total Consumption</string>
    <string name="last_charge_text">Last Charge</string>
    <string name="av_consumption_text">Average Consumption</string>
    <string name="charge_remaining_text">Charge Remaining</string>
    <string name="range_text">Range</string>
    <string name="consumption_text">---</string>
    <string name="kwh_text">kWh</string>
    <string name="av_cons_text">---</string>
    <string name="kwh_day_text">kWh/day</string>
    <string name="charge_remain_text">---</string>
    <string name="my_range_text">---</string>
    <string name="miles_text">Miles</string>
    <string name="my_mileage_text">---</string>
    <string name="m_kwh_text">Miles/kWh</string>
    <string name="my_date_text">--/--/--</string>
    <string name="my_time_text">-- hours ago</string>
    <string name="filter_button_text">Filter Results</string>
    <string name="cancel_button_text">Close</string>
    <string name="power_info_text">Min Power Rate</string>
    <string name="connectors_info_text">Connectors Available at Station</string>
    <string name="price_info_text">Max Price</string>
    <string name="show_all_text">Show All</string>
    <string name="type_2_text">Type 2 Only</string>
    <string name="within_range_text">Within Range</string>
    <string name="ev_toggle_info_text">Filters</string>
    <string name="show_price_default">Any</string>
    <string name="show_connectors_text">Any</string>
    <string name="reset_button_text">Reset</string>
    <string name="price_free_text">Free</string>
    <string name="price_any_text">Any</string>
    <string name="connectors_any_text">Any</string>
    <string name="connectors_max_text">10</string>
    <string name="apply_button_text">Apply</string>
    <string name="auto_search_hint">Search for something...</string>
    <string name="sample_auto_search_result">Sample Result</string>
    <string-array name="place_types_array">
        <item>Cafe</item>
        <item>Convenience Store</item>
        <item>Gym</item>
        <item>Library</item>
        <item>Cinema</item>
        <item>Museum</item>
        <item>Pharmacy</item>
        <item>Restaurant</item>
    </string-array>
</resources>