<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             android:layout_width="match_parent"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_height="match_parent">
    <TextView
            android:text="@string/settings_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/settingsTitle" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent" android:textSize="24sp"
            android:textStyle="bold" android:textColor="@color/colorPrimaryDark" android:textAlignment="center"/>
    <Button
            android:text="@string/account_button_txt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/accountButton" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/settingsTitle" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:textAlignment="center"
            android:drawableLeft="@drawable/user_account_icon"
            android:background="@drawable/button_border" android:textColor="@color/colorPrimary"/>
    <Button
            android:text="@string/help_button_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/helpButton" android:layout_marginTop="100dp"
            app:layout_constraintTop_toBottomOf="@+id/accountButton" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:drawableLeft="@drawable/help_icon"
            android:background="@drawable/button_border" android:textAlignment="center"
            android:textColor="@color/colorPrimary"/>
    <Button
            android:text="@string/about_button_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/aboutButton"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/helpButton" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:drawableLeft="@drawable/about_icon"
            android:background="@drawable/button_border" android:textColor="@color/colorPrimary"
            android:textAlignment="center" android:textSize="14sp"/>
</android.support.constraint.ConstraintLayout>